<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0"
    tools:context="com.depotlpgbanyuwangi.consequencyandmonitoringsystem.MainActivity"
    tools:layout_editor_absoluteY="73dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/desc"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pertamina_logo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/elpiji_logo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308"
        tools:text="Consequency and Monitoring System" />

    <EditText
        android:id="@+id/IDLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="#A9A9A9"
        android:drawableLeft="@drawable/ic_stat_id"
        android:drawableStart="@drawable/ic_stat_id"
        android:ems="10"
        android:hint="@string/id_hint"
        android:inputType="text"
        android:labelFor="@id/IDLogin"
        android:text="@string/id"
        android:textColor="#808080"
        android:textColorHint="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/id" />

    <EditText
        android:id="@+id/passLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#A9A9A9"
        android:drawableLeft="@drawable/ic_stat_lock"
        android:drawableStart="@drawable/ic_stat_lock"
        android:ems="10"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:labelFor="@id/passLogin"
        android:text="@string/password"
        android:textColor="#808080"
        android:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="@+id/IDLogin"
        app:layout_constraintStart_toStartOf="@+id/IDLogin"
        app:layout_constraintTop_toBottomOf="@+id/IDLogin" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="217dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundedbtngreen"
        android:onClick="onButtonClick"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passLogin"
        app:layout_constraintTop_toBottomOf="@+id/passLogin"
        app:layout_constraintVertical_bias="0.186"
        tools:text="LOGIN" />

</android.support.constraint.ConstraintLayout>