<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="109dp"
        android:layout_height="82dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/pertamina_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="106dp"
        android:layout_height="77dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/elpiji_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="341dp"
        android:layout_height="31dp"
        android:layout_marginBottom="250dp"
        android:layout_marginEnd="126dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="30dp"
        android:text="@string/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <EditText
        android:id="@+id/etPlat"
        android:layout_width="266dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="132dp"
        android:background="#A9A9A9"
        android:drawableLeft="@drawable/ic_stat_car"
        android:drawableStart="@drawable/ic_stat_car"
        android:ems="10"
        android:hint="@string/plat_hint"
        android:inputType="text"
        android:text="@string/plat"
        android:textColor="#808080"
        android:textColorHint="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="267dp"
        android:layout_height="37dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/roundedbtngreen"
        android:onClick="click"
        android:text="@string/lihat"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/etPlat"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etPlat"
        app:layout_constraintTop_toBottomOf="@+id/etPlat"
        tools:text="Lihat" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Selamat Datang, Checker"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</android.support.constraint.ConstraintLayout>