<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0"
    tools:layout_editor_absoluteY="89dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="109dp"
        android:layout_height="72dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/pertamina_logo"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="106dp"
        android:layout_height="77dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/elpiji_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btSkid"
        android:layout_width="142dp"
        android:layout_height="32dp"
        android:background="@drawable/roundedbtngreen"
        android:text="@string/cek_truck"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btDriver"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/btDriver" />

    <Button
        android:id="@+id/btDriver"
        android:layout_width="142dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundedbtngreen"
        android:text="@string/cek_driver"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView24"
        app:layout_constraintStart_toStartOf="@+id/imageView24"
        app:layout_constraintTop_toBottomOf="@+id/imageView24" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="140dp"
        android:layout_height="128dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.129"
        android:src="@drawable/truk" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="140dp"
        android:layout_height="128dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.129"
        android:src="@drawable/maskot_pertamina_hulu" />

    <Button
        android:id="@+id/btCheckDone"
        android:layout_width="161dp"
        android:layout_height="51dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/roundedbtndarkblue"
        android:enabled="false"
        android:text="@string/upload_data"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btDriver"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/btSkid"
        app:layout_constraintTop_toBottomOf="@+id/btDriver"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>